<resources>
    <string name="app_name">Sela MVP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sela Pilot</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="project_list_header">Projects</string>
    <string name="project_create_header">Create Project</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_create_project">New Project</string>


    <!-- Strings related to login -->
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_familyname">Family Name</string>
    <string name="prompt_username">Username</string>
    <!--<string name="prompt_email">Email</string>-->
    <!--<string name="prompt_publickey">Public Key</string>-->
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirmation">Confirm Password</string>
    <string name="action_login">Log In</string>
    <string name="action_logout">Log Out</string>
    <string name="action_register">Register</string>
    <string name="redirect_login">Already own an account? Login here</string>
    <string name="redirect_register">Don\'t yet have an account? Register here</string>
    <string name="warning_display_secret">
        The text below is a secret value that should not be shared with anyone.
        It is unique to your Sela account and can be used to recover your account:
    </string>
    <string name="warning_save_secret">
        We recommend that you do one of the following before proceeding with Sela:\n
        - Record it manually\n
        - Copy it digitally and paste it elsewhere\n
        - Save it to your device\n
    </string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_short_username">This username is too short</string>
    <string name="error_short_password">This password is too short</string>
    <string name="error_short_pubkey">This public key is too short</string>
    <string name="error_mismatched_password">Password confirmation must match password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_account_exists">Another user has already claimed that username</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_contains_space">No spaces permitted in this field</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="min_username_length">3</string>
    <string name="min_password_length">8</string>
    <string name="min_pubkey_length">10</string>
    <!--<string name="action_sign_in">Sign in or register</string>-->
    <!--<string name="action_sign_in_short">Sign in</string>-->
</resources>
